[workspace]

members = [
  "test",
  "aggregator",
  "backyard",
  "collections",
  "guessing_game",
  "rectangles",
  "restaurant",
  "variables",
  "minigrep",
  "closure",
  "smart_pointer",
  "limit_tracker",
  "concurrency",
  "oop",
  "blog",
  "unsafe_code", "hello_macro", "hello_macro_derive",
]
resolver = "3"
